Added a bunch of writing stuff

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 				<p>Thank you for checking out my portfolio! If you are here just to see my projects, you can have a look at the section to the right of this intro. You can also from here double-check anything from my CV that would merit needing receipts, such as any certificates or awards. But if you're here to learn more about me - I appreciate it! Hopefully you'll find what you're looking for!<br><br>My name is Naomi Nemo Wirén. I'm a Swedish game developer, practicing programming, games design, and games writing since 2016. Back when I moved to the UK in 2019, I had one goal: to become someone who knew what they talked about. Since then I have accomplished two degrees, taken part in multiple outreach programmes to help get university students into the games industry, and taken part in developing a product for a successful London start-up.<br><br>Outside of my feats, I am currently pursuing a rekindled passion of mine. Writing and storytelling has always interested me, and I am currently pursuing paths to become a better writer. I have in the past written stories for all manners of mediums, ranging from comedy sketches with my friends when I was in primary school, to short stories and poems in my college days. These days, I am still writing in the form of my personal book writing project, as well as learning how to adapt a story for games both through game writing courses tutored by respected writers in the games industry such as Lorne Nudel and more practically and small-scale in the hobby taking up most of my free-time: tabletop role-playing games.<br><br>Whether you are considering me for a writing position or a programming position, I promise to not let you down. I always aim to go above and beyond - this website for example was written by hand in HTML, CSS, and JQuery, despite me not having any prior experience with these languages. I hope my tenacity and willpower to ensure that whatever project I work on is as best as it can be sounds like something you would consider.<br><br>Kind regards,</p>
 				<img src="assets/Signature.png" class="signature">
 				<div class="extra-evidence">
-					<a href="files/TIGACertificate.pdf">'TIGA Graduate of the Year: Programmer 2022' Certificate</a>		
+					<a href="files/TIGACertificate.pdf" target="_blank">'TIGA Graduate of the Year: Programmer 2022' Certificate</a>
+					<a href="files/ELVTRCertificate.pdf" target="_blank">'ELVTR Game Writing' Certificate of Completion</a>
 				</div>
 			</section>
 			<section id="projects">
@@ -88,17 +89,6 @@
 						</div>
 					</div>
 				</a>
-				<!--
-				<a href="projects/suiphobia.html">
-					<div class="project">
-						<img src="assets/thumbnails/ELVTRGameWriting.png" class="thumbnail">
-						<div class="project-text">
-							<h1>Suiphobia</h1>
-							<p>A game story developed during the Game Writing course headed by Lorne Nudel.</p>
-						</div>
-					</div>
-				</a>
-				-->
 				<a href="projects/battlesweeper.html">
 					<div class="project">
 						<img src="assets/thumbnails/Battlesweeper.png" class="thumbnail">
@@ -117,12 +107,12 @@
 						</div>
 					</div>
 				</a>
-				<a href="projects/maverickaviation.html">
+				<a href="projects/fearingmirrors.html">
 					<div class="project">
-						<img src="assets/thumbnails/MaverickAviation.png" class="thumbnail">
+						<img src="assets/thumbnails/ELVTRGameWriting_Alt.png" class="thumbnail">
 						<div class="project-text">
-							<h1>XR Jetpack Simulator</h1>
-							<p>Developed as part of a final-year coursework for Maverick Aviation. Saw the interfacing between Unity and a real-time physics simulator, and further communication with a 4DoF platform and Valve Index VR headset.</p>
+							<h1>Fearing Mirrors</h1>
+							<p>A game story developed during the Game Writing course headed by Lorne Nudel. Developed script work, character biography, and lore item descriptions for a game about identity and dysmorphia.</p>
 						</div>
 					</div>
 				</a>
