--- a/projects.html
+++ b/projects.html
@@ -87,16 +87,8 @@
 						</div>
 					</div>
 				</a>
+
 				<!--<a href="">
-					<div class="project">
-						<img src="assets/thumbnails/MissingImage.jpg" class="thumbnail">
-						<div class="project-text">
-							<h1>Empty</h1>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nisi mi, rhoncus eu congue nec, ornare eu eros. Nulla facilisi. Nulla id velit vel leo hendrerit suscipit. Vestibulum sapien nunc.</p>
-						</div>
-					</div>
-				</a>
-				<a href="">
 					<div class="project">
 						<img src="assets/thumbnails/MissingImage.jpg" class="thumbnail">
 						<div class="project-text">
@@ -116,21 +108,12 @@
 				</a>-->
 			</section>
 			<section id="projects">
-				<!--<a href="projects/suiphobia.html">
+				<a href="projects/fearingmirrors.html">
 					<div class="project">
-						<img src="assets/thumbnails/ELVTRGameWriting.png" class="thumbnail">
+						<img src="assets/thumbnails/ELVTRGameWriting_Alt.png" class="thumbnail">
 						<div class="project-text">
-							<h1>Suiphobia</h1>
-							<p>A game story developed during the Game Writing course headed by Lorne Nudel. Still in development.</p>
-						</div>
-					</div>
-				</a>-->
-				<a href="projects/maverickaviation.html">
-					<div class="project">
-						<img src="assets/thumbnails/MaverickAviation.png" class="thumbnail">
-						<div class="project-text">
-							<h1>XR Jetpack Simulator</h1>
-							<p>Developed as part of a final-year coursework for Maverick Aviation. Saw the interfacing between Unity and a real-time physics simulator, and further communication with a 4DoF platform and Valve Index VR headset.</p>
+							<h1>Fearing Mirrors</h1>
+							<p>A game story developed during the Game Writing course headed by Lorne Nudel. Developed script work, character biography, and lore item descriptions for a game about identity and dysmorphia.</p>
 						</div>
 					</div>
 				</a>
@@ -140,6 +123,15 @@
 						<div class="project-text">
 							<h1>Unity Experiments</h1>
 							<p>A collection of the different coursework I developed throughout my BSc in Unity. Coursework touches upon gameplay programming fundamentals, linear algebra, tools development, and game AI.</p>
+						</div>
+					</div>
+				</a>
+				<a href="projects/characterwork.html">
+					<div class="project">
+						<img src="assets/thumbnails/CharacterWork_NoTitle.png" class="thumbnail">
+						<div class="project-text">
+							<h1>Character Work</h1>
+							<p>As a hobby, I develop characters that occasionally are used for tabletop purposes or general story development. This page is a collection of the characters I have refined.</p>
 						</div>
 					</div>
 				</a>
