--- a/projects/unityexperiments.html
+++ b/projects/unityexperiments.html
@@ -68,19 +68,15 @@
 		
 		<section class="project-detail">
 			<h1>Unity Experiments</h1>
-			<p></p>
-			<h1>Responsibilities</h1>
-			<ul>
-				<li></li>
-			</ul>
+			<p>Throughout my university experience, my assessments focused primarily on developing mechanics within certain limitations, ranging from applied games mathematics to artificial intelligence in games. These experiences honed my skills within the specified areas, resulting in high approval from my lecturers on the subjects.</p>
+			
+			<h1>Custom Unity Toolbox - Vectors, Quaternions, Matrices, Unity Extension</h1>
 			<div class="project-gallery">
-				<img src="../assets/thumbnails/MissingImage.jpg" style="flex: 1 1">
-				<img src="../assets/thumbnails/MissingImage.jpg" style="flex: 1 1">
+				<p style="flex: 1 1 40vw">In my second year of university, we had an entire module dedicated to mathematical elements that might be pertinent to games. This included linear algebra, as well as Newtonian physics and collision detection algorithms. To show our proficiency with these concepts, we were not allowed to use the built-in classes provided by Unity (Vector3, Matrix3x3, Quaternion, etc.), which I used to my advantage by creating my own classes fulfilling the same concepts, including a custom transform component, as well as custom handles to be used in the Unity scene view allowing for translation, rotation, and scaling, as well as shearing an object, and uniform-volume scaling.</p>
+				<img src="unityexperiments.html_assets/CustomToolbox.gif" style="flex: 1 1 10vh; object-fit: contain">
 			</div>
-			<div class="project-gallery">	
-				<img src="../assets/thumbnails/MissingImage.jpg" style="flex: 1 1">
-				<img src="../assets/thumbnails/MissingImage.jpg" style="flex: 1 1">
-			</div>
+			
+			
 		</section>
 	</body>
 </html>
